# web-project

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  deps.py  main.py  models.py  routes.py  schemas.py  security.py
backend/app/repositories/: cart_repository.py  product_repository.py  user_repository.py
backend/app/services/: admin_service.py  auth_service.py  cart_service.py  product_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AdminRoute.tsx  ProtectedRoute.tsx
frontend/src/data/: fakeProducts.ts
frontend/src/layouts/: AdminLayout.tsx  CustomerLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Cart.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/src/pages/admin/: CustomerManagement.tsx  Dashboard.tsx  ProductManagement.tsx
frontend/src/store/: authStore.ts
