[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0.1,<5",
    "email-validator>=2.2.0,<3",
    "fastapi>=0.115.0,<0.116",
    "psycopg2-binary>=2.9.10,<3",
    "pydantic-settings>=2.6.0,<3",
    "python-dotenv>=1.0.1,<2",
    "python-jose[cryptography]>=3.3.0,<4",
    "sqlalchemy>=2.0.36,<2.1",
    "uvicorn[standard]>=0.32.0,<0.33",
]
